# noos-challenge

./: README.md
hexbot/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
